--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Setup environment
+        run: |
+          git config --global user.email "joemelendez89@gmail.com"
+          git config --global user.name "Joseph Melendez"
+
       - name: Install node packages
         run: yarn
 
