--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - name: Setup environment
         run: |
-          git config --global user.email "joemelendez89@gmail.com"
-          git config --global user.name "joseph-melendez"
+          git config --global user.email "${{ env.EMAIL }}"
+          git config --global user.name "${{ env.USERNAME }}"
 
       - name: Checkout code
         uses: actions/checkout@v2
