--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
         run: |
           echo $env:EMAIL
           echo $env.EMAIL
+          echo "${{ env.EMAIL }}"
+          echo "${{ env:EMAIL }}"
           git config --global user.email "${{ env.EMAIL }}"
           git config --global user.name "${{ env.USERNAME }}"
 
