--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
         run: |
           git config --global user.email "${{ vars.EMAIL }}"
           git config --global user.name "${{ vars.USERNAME }}"
+          git config --global user.email "${{ env.EMAIL }}"
+          git config --global user.name "${{ env.USERNAME }}"
 
       - name: Checkout code
         uses: actions/checkout@v2
