--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Setup environment
         run: |
+          echo "Hello World"
           git config --global user.email "${{ vars.EMAIL }}"
           git config --global user.name "${{ vars.USERNAME }}"
           git config --global user.email "${{ env.EMAIL }}"
