--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           git config --global user.email "${{ vars.EMAIL }}"
           git config --global user.name "${{ vars.USERNAME }}"
-          git config --global url.https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/ 
+          git config --global url.https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/.insteadOf https://github.com/
 
       - name: Checkout code
         uses: actions/checkout@v3
